fixed: hidden credentials and basic setup

--- a/todo-list/todo-list/src/main/resources/application.properties
+++ b/todo-list/todo-list/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=todo-list
+spring.config.import=classpath:env.properties
 
-# Mongo DB CredentiaLs
-spring.data.mongodb.uri=mongodb+srv://kristian120304:practice@cluster0.x3nsn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=todolist
+# application.properties
+server.port=8081
+server.address=0.0.0.0
 
-# OAuth2 Credentials
-spring.security.oauth2.client.registration.google.client-id=1018083231779-lr92q0tq8dccueh6ki9bka27p7c97hm3.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=email,profile
-spring.security.oauth2.client.registration.google.redirect-uri=https://localhost:8080/login/oauth2/code/google
-spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
-spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
-spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.database=${MONGO_DB}
+
+spring.security.oauth2.client.registration.google.client-id=${OAuth2_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${OAuth2_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=${OAuth2_SCOPE}
+spring.security.oauth2.client.registration.google.redirect-uri=${OAuth2_REDIRECT}
+spring.security.oauth2.client.provider.google.authorization-uri=${OAuth2_AUTH_URI}
+spring.security.oauth2.client.provider.google.token-uri=${OAuth2_TOKEN_URI}
+spring.security.oauth2.client.provider.google.user-info-uri=${OAuth2_INFO_URI}
